Added heart rate reading from HealthKit

--- a/Projets/Fractione/FracWatch WatchKit Extension/Info.plist
+++ b/Projets/Fractione/FracWatch WatchKit Extension/Info.plist
@@ -12,5 +12,11 @@
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
 	</dict>
+	<key>NSHealthClinicalHealthRecordsShareUsageDescription</key>
+	<string>We access your health data to get access to your hear rate during workout</string>
+	<key>NSHealthShareUsageDescription</key>
+	<string>We access your health data to get access to your hear rate during workout</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>We access your health data to get access to your hear rate during workout</string>
 </dict>
 </plist>
