--- a/Projets/Fractione/iOS/Info.plist
+++ b/Projets/Fractione/iOS/Info.plist
@@ -20,6 +20,14 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSHealthClinicalHealthRecordsShareUsageDescription</key>
+	<string>We access your health data to get access to your hear rate during workout</string>
+	<key>NSHealthShareUsageDescription</key>
+	<string>We access your health data to get access to your hear rate during workout</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>We access your health data to get access to your hear rate during workout</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need location to track you</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -27,6 +35,10 @@
 	</dict>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchScreen</key>
 	<dict/>
 	<key>UIRequiredDeviceCapabilities</key>
